Прошел с трудом линтер

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -1,7 +1,7 @@
 .additional-goods__header-sub-span {
   font-size: 24px;
   line-height: 24px;
-  font-family: Oswald-Regular;
+  font-family: "Oswald-Regular", sans-serif;
   margin-bottom: 30px;
 }
 
@@ -18,7 +18,7 @@
 .additional-goods__article-header {
   font-size: 16px;
   line-height: 16px;
-  font-family: Oswald-Regular;
+  font-family: "Oswald-Regular", sans-serif;
   margin-bottom: 16px;
   text-transform: uppercase;
   margin-top: 14px;
@@ -27,32 +27,26 @@
 .additional-goods__article {
   display: flex;
   flex-direction: column;
+  border-top: 1px solid #cdcdcd;
 }
 
 .additional-goods__article-content {
   display: flex;
   justify-content: space-between;
+  font-size: 14px;
+  line-height: 14px;
+  font-family: "Arial-Regular", sans-serif;
 }
 
 .additional-goods__article-order {
   margin-bottom: 17px;
   margin-top: 14px;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
   border: 0;
   background-color: #68b738;
   padding: 14px 108px 14px 108px;
   max-width: 280px;
-}
-
-.additional-goods__article-content {
-  font-size: 14px;
-  line-height: 14px;
-  font-family: Arial-Regular;
-}
-
-.additional-goods__article {
-  border-top: 1px solid #cdcdcd;
 }
 
 .additional-goods__green-background {
@@ -73,6 +67,6 @@
 .additional-goods__green-background-text {
   font-size: 16px;
   line-height: 20px;
-  font-family: Arial-Regular;
-  color: #fff;
+  font-family: "Arial-Regular", sans-serif;
+  color: #ffffff;
 }
