--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,38 +1,43 @@
-.footer{
-	background-color: #f2f2f2;
-	display: flex;
-	flex-direction: column;
-	padding-top: 31px;
-	padding-bottom: 39px;
-	align-items: center;
-}
-.footer__social-links{
-	display: flex;
-}
-.footer__social-links-li{
-	list-style-type: none;
-}
-.footer__footer-logo{
-	padding-bottom: 31px;
-}
-.footer__right-logo{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.right-logo__link-organization{
-	font-size: 16px;
-	line-height: 16px;
-	font-family: Arial-Regular;
-	color: #444444;
-	text-decoration: none;
-	margin-right: 141px;
-}
-.footer__social-image:first-child{
-	margin-right: 37px
-}
-.footer__social-image:nth-child(2n){
-	margin-right: 40px;
+.footer {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  padding-top: 31px;
+  padding-bottom: 39px;
+  align-items: center;
 }
 
+.footer__social-links {
+  display: flex;
+}
 
+.footer__social-links-li {
+  list-style-type: none;
+}
+
+.footer__footer-logo {
+  padding-bottom: 31px;
+}
+
+.footer__right-logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-logo__link-organization {
+  font-size: 16px;
+  line-height: 16px;
+  font-family: "Arial-Regular", sans-serif;
+  color: #444444;
+  text-decoration: none;
+  margin-right: 141px;
+}
+
+.footer__social-image:first-child {
+  margin-right: 37px;
+}
+
+.footer__social-image:nth-child(2n) {
+  margin-right: 40px;
+}
