что то не то с сеткой мобильной

--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -23,25 +23,27 @@
 .page-header__menu-logos-links {
   background-color: @white;
   padding-top: 11px;
-  padding-bottom: 16px;
+  padding-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .menu-main__sub-menu-elem {
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
   list-style-type: none;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 20px;
+  padding-bottom: 19px;
 }
 
 .menu-main__sub-menu-elem-link {
   text-decoration: none;
   font-family: "Oswald-Medium", sans-serif;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 17px;
+  line-height: 17px;
   font-weight: bold;
   color: #111111;
   text-transform: uppercase;
