Сделал все версии мобильных страниц кроме страницы form

--- a/source/less/additional-goods.less
+++ b/source/less/additional-goods.less
@@ -2,32 +2,41 @@
   font-size: 24px;
   line-height: 24px;
   font-family: "Oswald-Regular", sans-serif;
-  margin-bottom: 30px;
 }
 
 .additional-goods__header-line {
   height: 3px;
   background-color: #68b738;
-  width: 100%;
+  width: 53px;
+  margin-top: 6px;
+  margin-left: 21px;
 }
 
 .additional-goods__header {
   display: flex;
+  padding-left: 20px;
+  padding-top: 4px;
+  align-items: center;
+  padding-top: 28px;
+  padding-bottom: 34px;
 }
 
 .additional-goods__article-header {
   font-size: 16px;
   line-height: 16px;
   font-family: "Oswald-Regular", sans-serif;
-  margin-bottom: 16px;
+  margin-bottom: 13px;
   text-transform: uppercase;
   margin-top: 14px;
+  margin-left: 1px;
 }
 
 .additional-goods__article {
   display: flex;
   flex-direction: column;
   border-top: 1px solid #cdcdcd;
+  margin: 0 auto;
+  max-width: 280px;
 }
 
 .additional-goods__article-content {
@@ -45,8 +54,11 @@
   color: #ffffff;
   border: 0;
   background-color: #68b738;
-  padding: 14px 108px 14px 108px;
+  padding: 10px 108px 10px 111px;
   max-width: 280px;
+  font-family: "Oswald-Regular", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .additional-goods__green-background {
@@ -57,11 +69,15 @@
   flex-direction: column;
   align-items: center;
   padding-top: 65px;
-  padding-bottom: 46px;
+  padding-bottom: 41px;
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 41px;
 }
 
 .additional-goods__background-img {
-  margin-bottom: 64px;
+  margin-bottom: 61px;
 }
 
 .additional-goods__green-background-text {
@@ -69,4 +85,6 @@
   line-height: 20px;
   font-family: "Arial-Regular", sans-serif;
   color: #ffffff;
+  max-width: 160px;
+  text-align: center;
 }
