--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -1,6 +1,8 @@
 .how-it-is-work {
-  padding-top: 33px;
-  padding-bottom: 42px;
+  padding-top: 15px;
+  max-width: 280px;
+  margin: 0 auto;
+  padding-bottom: 29px;
   display: flex;
   flex-direction: column;
 }
@@ -10,12 +12,12 @@
   line-height: 60px;
   font-family: "Oswald-Regular", sans-serif;
   color: #111111;
-  margin-bottom: 42px;
+  margin-bottom: 29px;
 }
 
 .how-it-is-work__sub {
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 14px;
   align-items: center;
 }
 
@@ -24,6 +26,9 @@
   width: 60px;
   height: 60px;
   background-color: #68b738;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .how-it-is-work__sub-text {
@@ -32,4 +37,21 @@
   font-family: "Arial-Regular", sans-serif;
   color: #444444;
   max-width: 191px;
+}
+
+.how-it-is-work__sub-text-powder {
+  max-width: 194px;
+}
+
+.how-it-is-work__sub-powder {
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.how-it-is-work__sub-clock {
+  margin-top: 7px;
+}
+
+.how-it-is-work__sub-text-in-a-month {
+  max-width: 194px;
 }
