--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,3 +11,5 @@
 @import "find-all-goods.less";
 @import "additional-goods.less";
 @import "adaptive-page-header.less";
+@import "main-index.less";
+
