--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -1,10 +1,14 @@
 .communicating {
-  display: flex;
-  justify-content: center;
-  padding-top: 31px;
+  padding-top: 28px;
   padding-bottom: 26px;
+
 }
 
+.communicating__main-text {
+ max-width: 280px;
+ margin: 0 auto;
+ display: flex;
+}
 .communicating__offer-communicating {
   max-width: 122px;
   font-size: 16px;
@@ -12,16 +16,21 @@
   color: #111111;
   text-transform: uppercase;
   font-family: "Oswald-Regular", sans-serif;
-  margin-right: 20px;
+  margin-right: 21px;
 }
 
 .communicating__address {
   font-family: "Arial-Regular", sans-serif;
-  max-width: 134px;
+  max-width: 135px;
   font-size: 14px;
   line-height: 20px;
+  margin-top: 2px;
 }
 
 .communicating-form {
   background-color: #f2f2f2;
+}
+
+.communicating__address-index {
+  margin-top: -1px;
 }
