--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -3,11 +3,14 @@
   flex-direction: column;
   align-items: center;
   padding-top: 26px;
-  padding-bottom: 24px;
+  border-bottom: 1px solid #ededed;
+  border-top: 1px solid #ededed;
+  border-left: 1px solid #ededed;
+  border-right: 1px solid #ededed;
 }
 
 .find-all-goods__plus-mobile-img {
-  margin-bottom: 26px;
+  margin-bottom: 24px;
 }
 
 .find-all-goods__show-additional-goods {
@@ -15,7 +18,9 @@
   line-height: 20px;
   font-family: "Oswald-Regular", sans-serif;
   text-transform: uppercase;
-  margin-bottom: 16px;
+  margin-bottom: 7px;
+  margin-left: 2px;
+  align-items: center;
 }
 
 .find-all-goods__show-all-goods {
@@ -25,7 +30,14 @@
   line-height: 20px;
   font-family: "Oswald-Regular", sans-serif;
   text-transform: uppercase;
-  padding: 14px 94px 14px 94px;
+  padding: 11px 94px 11px 95px;
   text-align: center;
-  margin-bottom: 24px;
+  margin-bottom: 22px;
+}
+
+.find-all-goods__more-tastes {
+  font-size: 12px;
+  line-height: 16px;
+  font-family: "Arial-Regular", sans-serif;
+  margin-bottom: 21px;
 }
