--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -2,13 +2,34 @@
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
-  padding-top: 31px;
+  padding-top: 33px;
   padding-bottom: 39px;
   align-items: center;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+.footer__footer-content {
+  max-width: 280px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .footer__social-links {
   display: flex;
+  padding-left: 26px;
+  margin-bottom: 16px;
+  margin-top: 22px;
+  align-items: center;
+
 }
 
 .footer__social-links-li {
@@ -16,13 +37,15 @@
 }
 
 .footer__footer-logo {
-  padding-bottom: 31px;
+  padding-bottom: 28px;
 }
 
 .footer__right-logo {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 21px;
+  border-top: 1px solid #d9d9d9;
 }
 
 .right-logo__link-organization {
@@ -31,13 +54,21 @@
   font-family: "Arial-Regular", sans-serif;
   color: #444444;
   text-decoration: none;
-  margin-right: 141px;
+  margin-right: 139px;
 }
 
-.footer__social-image:first-child {
+.footer__social-links-catalog {
+  margin-top: 23px;
+}
+
+.footer__social-image {
   margin-right: 37px;
 }
 
 .footer__social-image:nth-child(2n) {
   margin-right: 40px;
+}
+
+.footer__footer-logo-index {
+  padding-bottom: 27px;
 }
