--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -2,16 +2,28 @@
 
 .header-background {
   background-color: #65a93c;
-  background-image: url("../img/index-can-mobile.png");
+  background-image: url("../img/index-background-mobile.png");
   background-repeat: no-repeat;
-  padding: 29px 0 303px 0;
+  padding: 29px 0 0 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .header-background__main-words {
   font-family: "Oswald-Regular", sans-serif;
-  font-size: 36px;
-  line-height: 36px;
+  font-size: 33px;
+  font-weight: normal;
+  line-height: 34px;
+  margin-top: -7px;
+  text-align: center;
+  max-width: 248px;
+  margin-left: auto;
+  margin-left: 35px;
+  margin-right: auto;
+  margin-top: 1px;
+  letter-spacing: 1.2px;
   color: @white;
 }
 
@@ -21,7 +33,8 @@
   font-family: "Oswald-Regular", sans-serif;
   color: @white;
   font-weight: normal;
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-bottom: 302px;
   text-transform: uppercase;
 }
 
@@ -34,8 +47,14 @@
   background-color: #68b738;
   text-decoration: none;
   width: 100%;
-  padding: 14px 0 11px 0;
+  padding: 10px 0 11px 0;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
+}
+
+.header-background__img {
+	position: absolute;
+	top: 165px;
+    left: 20px;
 }
