--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -1,3 +1,8 @@
+.programs {
+	max-width: 280px;
+	margin: 0 auto;
+}
+
 .programs__program {
   background-color: #f2f2f2;
   display: flex;
@@ -6,7 +11,7 @@
 
 .programs__header-program {
   display: flex;
-  margin-bottom: 26px;
+      margin-bottom: 23px;
 }
 
 .programs__img_program {
@@ -15,18 +20,26 @@
   width: 50px;
   height: 50px;
   margin-right: 20px;
+  margin-top: 2px;
+
 }
 
 .programs__name {
   font-size: 24px;
   line-height: 37.02px;
+  margin-top: 7px;
+  text-transform: uppercase;
   font-family: "Oswald-Regular", sans-serif;
 }
 
 .programs__program:first-child {
-  padding: 22px 36px 23px 21px;
-  margin-bottom: 20px;
-  margin-top: 22px;
+    padding: 22px 34px 21px 21px;
+    margin-bottom: 20px;
+    margin-top: 22px;
+}
+
+.programs__header-program-puma {
+  margin-bottom: 22px;
 }
 
 .programs__program-content {
@@ -34,11 +47,16 @@
   line-height: 18px;
   font-family: "Arial-Regular", sans-serif;
   color: #444444;
-  padding-bottom: 26px;
+  padding-bottom: 23px;
 }
 
 .programs__program:last-child {
-  padding: 24px 53px 23px 20px;
+  padding: 24px 47px 23px 21px;
+}
+
+.programs__img_program-img:nth-child(2n) {
+	margin-top: 10px;
+    margin-left: -10px;
 }
 
 .programs__program-link {
@@ -48,11 +66,20 @@
   line-height: 16px;
   text-decoration: none;
   color: #111111;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .programs__program-main-content-link {
   display: flex;
   border-top: 1px solid #d9d9d9;
-  padding-top: 20px;
+  padding-top: 18px;
+}
+
+.programs__img_program-img {
+  margin-left: 9px;
+}
+
+.programs__img-running-puma {
+  margin-top: 12px;
+  margin-left: -8px;
 }
